<resources>
    <string name="app_name">PM1E1311</string>
    <string name="irAtras">Atras</string>
    <string name="compartirContac">Compartir contacto</string>
    <string name="eliminarContac">Eliminar contacto</string>
    <string name="verImage">Ver Imagen</string>
    <string name="updateContac">Actualizar contacto</string>
    <string name="btnLlamar">Llamar</string>
    <string-array name="list_paises">
        <item>Belice (501)</item>
        <item>Guatemala (502)</item>
        <item>El Salvador (503)</item>
        <item>Honduras (504)</item>
        <item>Nicaragua (505)</item>
        <item>Costa Rica (506)</item>
        <item>Panama (507)</item>
    </string-array>
</resources>